--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
     font-family: 'Josefin Sans', sans-serif;
 }
 
+/* header style */
 .btn-primary {
     height: 50px;
     border-radius: 5px;
@@ -31,11 +32,10 @@
 
     display: flex;
     margin-top: 150px;
-
     padding-right: 200px;
     padding-left: 700px;
     text-align: right;
-    justify-content: space-between;
+
 
 }
 
@@ -46,4 +46,117 @@
 .title {
     font-weight: 700;
     font-size: 60px;
+}
+
+/* failure section */
+.section-1 {
+    display: flex;
+    margin-top: 130px;
+}
+
+.person {
+    padding-left: 100px;
+}
+
+.list {
+    margin-top: 300px;
+    padding-right: 150px;
+    padding-left: 80px;
+}
+
+.failure {
+    font-weight: 700;
+    font-size: 40px;
+}
+
+.point {
+    color: #444343;
+}
+
+/* my plan style */
+.p-title {
+    text-align: center;
+    font-weight: 700;
+    font-size: 40px;
+}
+
+.plans {
+    display: flex;
+    justify-content: space-around;
+
+}
+
+.section-2 {
+    margin-top: 130px;
+}
+
+h1 {
+    font-weight: 700;
+    font-size: 30px;
+}
+
+/* watch picture styles */
+.watch {
+    background: linear-gradient(90deg, #F15B22 0%, rgba(241, 91, 34, 0) 100%), url('images/watch.png');
+    margin-top: 130px;
+    background-position: center;
+    width: 1140px;
+    height: 300px;
+
+    /* width: 940px;
+    height: 300px;
+    background-repeat: no-repeat;
+    border-radius: 8px; */
+
+
+}
+
+.call {
+    padding-left: 100px;
+    margin-top: 100px;
+}
+
+.section-3 {
+    display: flex;
+}
+
+/* fututre style */
+.fututre {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 130px;
+    background-color: black;
+    color: #FFFFFF;
+    width: 1300px;
+    height: 577px;
+}
+
+.f-part {
+    width: 485px;
+    height: 317px;
+    left: 230px;
+    top: 2776.3px;
+    padding-left: 100px;
+    margin-top: 200px;
+}
+
+.f-title {
+    font-weight: 700;
+    font-size: 45px;
+
+    margin-bottom: 20px;
+}
+
+.section-dcrp {}
+
+.email {
+    width: 300px;
+    height: 50px;
+    left: 1046px;
+    margin-bottom: 40px;
+}
+
+.sub {
+    margin-top: 200px;
+    padding-right: 100px;
 }
